# tracker-console

./: .gitignore  Cargo.toml  MIDI-Tracker.pygame  README.md  actions.yml  justfile
.cargo/: config.toml
.github/workflows/: CI.yml
backend/: Cargo.toml  pyproject.toml
backend/common-lib/: Cargo.toml
backend/src/: base_disaply.rs  controls.rs  ipc.rs  lib.rs
common-lib/: Cargo.toml
common-lib/src/: lib.rs
core/src/: chain_menu.rs  loging.rs  tracker_state.rs
gui/: .gitignore  MIDI-Tracker.pygame  justfile
gui/midi_tracker/: chains_tab.py  insts_tab.py  phrase_tab.py  side_bar.py  song_tab.py
pygame-frontend/: pyproject.toml
pygame-frontend/midi_tracker/: _logging.py  side_bar.py  song_tab.py
pygame-frontend/tracker_backend/: Cargo.toml  pyproject.toml
pygame-frontend/tracker_backend/src/: ipc.rs  lib.rs  pygame_coms.rs
pygame-version/: MIDI-Tracker.pygame  requirments.txt
src/: Cargo.toml  README.md  base_disaply.rs  base_display.rs  chain_menu.rs  controls.rs  ipc.rs  lib.rs  phrase_menu.rs  pygame_coms.rs  rust-toolchain.toml  song_menu.rs  tracker_state.rs
src/config/: ui.rs
src/src/: base_display.rs  controls.rs  graph.rs  lib.rs  pygame_coms.rs  stepper.rs  tracker_state.rs
src/src/config/: ui.rs
src/src/graph/: mod.rs  traits.rs
src/src/stepper/: mod.rs  step.rs  traits.rs
src/src/stepper/channels/: mod.rs  noise.rs  pulse.rs  pulse_sweep.rs  wave.rs
