[package]
name = "midi-band"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "midi_band"

[dependencies]
# bevy = { version = "0.14.2", default-features = false, features = ["bevy_gilrs", "bevy_state", "multi_threaded"] }
bevy = "0.14.2"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "nightly"] }
anyhow = { version = "1.0.93", features = ["backtrace"] }
serde = { version = "1.0.214", features = ["derive"] }
